--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -174,6 +174,20 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 
 ----
 
+==Asturian==
+{{wikipedia|lang=ast}}
+
+===Proper noun===
+{{ast-proper noun}}
+
+# {{l/en|Israel}} {{gloss|the state}}
+====Related terms====
+* {{l|ast|israelín}}
+
+[[Category:ast:Countries]]
+
+----
+
 ==Catalan==
 
 ===Proper noun===
