/* Verb */ t isn't doubled in this verb in either en-GB or en-US <vomit#25616468>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -12,7 +12,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * {{audio|En-us-vomit.ogg|audio (US)}}
 
 ===Verb===
-{{en-verb|vomit|t|ed}}
+{{en-verb}}
 
 # To [[regurgitate]] the contents of a [[stomach]]; [[puke]].
 #* Bible, Jonah ii. 10
