/* Translations */ tidy up <butter#25642522>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -197,7 +197,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Bengali: {{t|bn|মাখন|tr=makhôn|sc=Beng}}
 * Breton: {{t+|br|amanenn|m}}
 * Bulgarian: {{t+|bg|масло|n|tr=máslo}}
-* Burmese: {{t+|my|ထောပတ်|tr=htaw:bat}}
+* Burmese: {{t+|my|ထောပတ်|tr=htau:pat}}
 * Catalan: {{t|ca|mantega|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t+|cmn|白脫|sc=Hani}}, {{t+|cmn|白脱|tr=báituō|sc=Hani}}
@@ -212,7 +212,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * French: {{t+|fr|beurre|m}}
 * {{trreq|fur}}
 * Galician: {{t+|gl|manteiga|f}}
-* Georgian: {{t|ka|კარაქი|tr=karak'i|sc=Geor}}
+* Georgian: {{t|ka|კარაქი}}
 * German: {{t+|de|Butter|f}}
 *: Bavarian: {{t|bar|Budda|m}}
 * Greek: {{t+|el|βούτυρο|n|tr=voútyro}}
@@ -228,6 +228,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Interlingua: {{t|ia|butyro}}
 * {{trreq|ie}}
 * Irish: {{t+|ga|im|m}}
+*: Old Irish: {{t|sga|imb|n}}
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Jèrriais: {{t|roa-jer|beurre|m}}
@@ -256,13 +257,12 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Maori: {{t|mi|pata}}
 * Marathi: {{t|mr|माखणे|tr=mākhaṇe|sc=Deva}}
 * {{trreq|mwl}}
-* Mongolian: {{t|mn|цөцгийн тос|tr=tsötsgiin tos|sc=Cyrl}}
+* Mongolian: {{t|mn|цөцгийн тос|sc=Cyrl}}
 * Navajo: {{t|nv|mandagíiya}}
 * Novial: {{t|nov|butre}}
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
 * Old Church Slavonic: {{t|cu|масло|n|tr=maslo|sc=Cyrs}}
 * Old English: {{t|ang|butere|f}}
-* Old Irish: {{t|sga|imb|n}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
@@ -274,7 +274,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|маслац|m}}, {{t|sh|путер|m}}
 *: Roman: {{t|sh|maslac|m}}, {{t|sh|puter|m}}
-* Sinhalese: {{t|si|බටර්|tr=batar|sc=Sinh}}
+* Sinhalese: {{t|si|බටර්}}
 * Slovak: {{t|sk|maslo|n}}
 * Slovene: {{t+|sl|maslo|n}}, {{t|sl|puter|m}} {{qualifier|colloquial}}
 * Sorbian:
@@ -312,7 +312,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ka}}: {{t|ka|ერბო|tr=erbo}}
+* {{ttbc|ka}}: {{t|ka|ერბო}}
 {{trans-mid}}
 {{trans-bottom}}
 
