--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -52,6 +52,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-mid}}
 * Old Saxon: {{t|osx|gisnidan}}
 * Portuguese: {{t|pt|cortado|m}}
+* Romanian: {{t+|ro|tăiat}}
 * Russian: {{t+|ru|ре́заный|sc=Cyrl|tr=rézanyj}}, {{t|ru|наре́заный|sc=Cyrl|tr=narézanyj}}, {{t|ru|поре́заный|sc=Cyrl|tr=porézanyj}}, {{t|ru|разре́заный|sc=Cyrl|tr=razrézanyj}}
 * Spanish: {{t+|es|cortado}}
 * Swedish: {{t+|sv|klippt}}, {{t+|sv|skuren}}
