--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -252,6 +252,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Hungarian: {{t+|hu|orrnyereg}}
 * Irish: {{t|ga|droichead sróine|m}}
 * Italian: {{t|it|setto}} nasale {{g|m}}
+* Maori: {{t|mi|kaka}}, {{t|mi| kaka o te ihu}}
 * Polish: {{t+|pl|grzbiet|m}}
 * Portuguese: {{t+|pt|ponte|f}}
 * Russian: {{t+|ru|переносица|f|tr=perenósica}}
@@ -379,6 +380,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Hungarian: {{t+|hu|áthidal}}
 * Macedonian: {{t|mk|премостува|tr=premóstuva|sc=Cyrl}}
 {{trans-mid}}
+* Maori: {{t|mi|kahupapa}}
 * Portuguese: {{t+|pt|superar}}
 * Swedish: {{t+|sv|överbrygga}}
 * Tongan: {{t|to|hala fakakavakava}}
