t+fur:[[fevelâ]] ([[WT:EDIT|Assisted]]) <speak#25674036>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -115,6 +115,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Estonian: {{t|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
+* Friulian: {{t|fur|fevelâ}}
 * Galician: {{t+|gl|falar}}
 * Georgian: {{t|ka|ლაპარაკი|tr=laparaki|sc=Geor}}
 * German: {{t+|de|sprechen}}, {{t+|de|reden}}
