--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -70,11 +70,11 @@ From {{etyl|la|fr}} {{term/t|la|līber||free}}.
 
 ==Hiligaynon==
 
+===Etymology===
+{{etyl|es|hil}} {{term|libre|lang=es}}
+
 ===Pronunciation===
 * {{IPA|/ˈlibɾɛ/|lang=hil}}
-
-===Etymology===
-{{etyl|es|hil}} {{term|libre|lang=es}}.
 
 ===Adjective===
 {{hil-noun|líbre}}
@@ -172,11 +172,11 @@ From {{etyl|la|es}} {{term/t|la|līber}}
 
 ==Tagalog==
 
+===Etymology===
+{{etyl|es|tl}} {{term|libre|lang=es}}
+
 ===Pronunciation===
 * {{IPA|/ˈlibɾɛ/|lang=tl}}
-
-===Etymology===
-{{etyl|es|tl}} {{term|libre|lang=es}}.
 
 ===Adjective===
 {{tl-noun|líbre}}
