--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -352,6 +352,7 @@
 * Icelandic: {{t+|is|röð|f}}
 * Irish: {{t|ga|sraith|f}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto}}
+* Maori: {{t|mi|tōtika}}
 * Polish: {{t+|pl|strit|m}}
 * Russian: {{t|ru|стрейт|m|tr=strejt|sc=Cyrl}}, {{t|ru|стрит|m|tr=strit|sc=Cyrl}}
 * Swedish: {{t+|sv|stege|c}}
