t-balance t+hy:[[սթրեյթ]] t+hy:[[սթրիթ]] ([[WT:EDIT|Assisted]]) <straight#25713987>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -341,6 +341,7 @@
 {{trans-see|[[heterosexual]]}}
 
 {{trans-top|five cards in sequence}}
+* Armenian: {{t|hy|սթրեյթ|sc=Armn}}, {{t|hy|սթրիթ|sc=Armn}}
 * Catalan: {{t+|ca|escala|f}}
 * Czech: {{t|cs|postupka|f}}
 * Dutch: {{t+|nl|straat|f}}
@@ -348,9 +349,9 @@
 * French: {{t+|fr|quinte|f}}
 * German: {{t+|de|Straße|f}}
 * Greek: {{t|el|κέντα|f|sc=Grek}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|sor}}
 * Icelandic: {{t+|is|röð|f}}
-{{trans-mid}}
 * Irish: {{t|ga|sraith|f}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto}}
 * Maori: {{t|mi|tōtika}}
