--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -93,7 +93,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-top|in bodybuilding, having individual groups of muscle fibers stand out}}
 * German: {{t+|de|geschnitten}}
 {{trans-mid}}
-* Italian: {{t+|it|scolpito|m}}
+* Italian: {{t+|it|scolpito|m}}, {{t|it|cesellato|m}}
 {{trans-bottom}}
 
 {{trans-top|colloquial: circumcised (see also [[circumcised]])}}
