t+ast:[[rama]] ([[WT:EDIT|Assisted]]) <branch#25731643>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -57,6 +57,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Arabic: {{t|ar|فرع|m|tr=farʿ|sc=Arab}}
 * Armenian: {{t|hy|ճյուղ|tr=č̣yuġ}}, {{t|hy|ոստ|tr=ost}}
 *: Old Armenian: {{t|xcl|ճիւղ|tr=čiwł|sc=Armn}}, {{t|xcl|ոստ|tr=ost|sc=Armn}}, {{t|xcl|կողր|tr=kołr|sc=Armn}}
+* Asturian: {{t|ast|rama|f}}
 * Basque: {{t|eu|adar}}
 * Belarusian: {{t|be|галіна|f|tr=halína|sc=Cyrl}}, {{t|be|галінка|f|tr=halínka|sc=Cyrl}}
 * Bulgarian: {{t+|bg|клон|m|tr=klon}}
