--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -6,7 +6,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|plæġ}}, {{term/t|ang|pleġa}}, {{term/t|ang|plæġa||play, quick motion, movement, exercise; (athletic) sport, game; festivity, drama; battle; gear for games, an implement for a game; clapping with the hands, applause}}, deverbative of {{term/t|ang|pleġian||to play}}; see above.
 
 ===Pronunciation===
-* {{enPR|plā}}, {{IPA|/pleɪ/}}
+* {{enPR|plā}}, {{IPA|/pleɪ/, /plɛɪ/}}
 * {{audio|en-us-play.ogg|Audio (US)}}
 * {{rhymes|eɪ}}
 
