--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 {{trans-bottom}}
 
 {{trans-top|to have a sensation as of insects creeping on the skin}}
-* Finnish: {{t|fi|värisyttää}}, {{t|fi|[[aiheuttaa]] [[värityksiä]]}}
+* Finnish: {{t|fi|värisyttää}}, {{t|fi|[[aiheuttaa]] [[väristyksiä]]}}
 {{trans-mid}}
 {{trans-bottom}}
 
