--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -607,7 +607,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-top|to enter a queue in a wrong place}}
 * Armenian: {{t|hy|կտրել|tr=ktrel}}
 * Chinese:
-*: Mandarin: {{t+|cmn|插队|sc=Hani}}
+*: Mandarin: {{t+|cmn|插队|sc=Hani}}, {{t+|cmn|加塞儿|tr=jiāsāir|sc=Hani}}
 * Danish: {{t+|da|snyde}}
 * Dutch: {{t|nl|voorsteken}}
 * Finnish: {{t|fi|etuilla}}, {{t+|fi|kiilata}}
