/* Proper noun */ we need to have a templatised usage note like de.Wikt has, to explain the circumstances the well-attested plural is limited to <France#25801773>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -16,9 +16,9 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * {{rhymes|ɑːns}}
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|Frances}}
 
-# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République française]]). Population: 62 million inhabitants.
+# A [[country]] in Western Europe which borders [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]], is a member state of the [[European Union]]{{,}} and has a population of 62 million inhabitants. Official name: [[French Republic]] ([[République française]]).
 #* {{quote-news
 |year=2012
 |date=April 23
