--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -554,7 +554,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}
 *: Old French: {{t|fro|colper}}, {{t|fro|couper}}, {{t|fro|coper}}
-* Friulian: {{t|fur|tajâ}}
+* Friulian: {{t|fur|taiâ}}
 * Galician: {{t+|gl|cortar}}
 * German: {{t+|de|schneiden}}
 * Greek: {{t+|el|κόβω|sc=Grek}}
