--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -346,7 +346,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 {{trans-top|mental impression}}
 * Bulgarian: {{t+|bg|усещане|sc=Cyrl}}
 * Finnish: {{t|fi|tuntuma}}
-* German: {{t+|de|Gefühl|n}}, {{t+|de|Eindruck|m}}
+* German: {{t+|de|Gefühl|n}}, {{t+|de|Eindruck|m}}, {{t+|de|Gespür|n}}
 * Norwegian:
 *: Bokmål: {{t+|nb|følelse|m}}
 {{trans-mid}}
