--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -3,7 +3,7 @@
 {{stroke order|strokes=9}}
 
 ===Alternative forms===
-There are minor differences in where the list stroke of the top component (top-left to bottom-right diagonal) starts – on the second horizontal stroke or on the third.
+There are minor differences in where the last stroke of the top component (top-left to bottom-right diagonal) starts – on the second horizontal stroke or on the third.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=5060<sub>3</sub>|canj=手大日 (QKA)|ids=⿱[[𡗗]][[日]]}}
