--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -239,7 +239,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #: ''a zipper '''pull'''''
 # {{context|slang|dated|lang=en}} Something in one's favour in a comparison or a contest; an advantage; means of influencing.
 #: ''In weights the favourite had the '''pull'''.''
-# [[appeal|Appeal]] or [[attraction]] or (as of a movie star)
+# [[appeal|Appeal]] or [[attraction]] (as of a movie star)
 # {{context|Internet|uncountable|lang=en}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''
 # A journey made by [[row]]ing
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter V
