t+ast:[[sentir]] ([[WT:EDIT|Assisted]]) <feel#25817500>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -100,6 +100,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Arabic: {{t+|ar|شعر|tr=šáʿara}}
 * Armenian: {{t|hy|զգալ|sc=Armn}}, {{t|hy|շոշափել|sc=Armn}}
 * Aromanian: {{t|rup|simtu}}
+* Asturian: {{t|ast|sentir}}
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
 * Chinese:
@@ -142,6 +143,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Arabic: {{t+|ar|شعر|tr=šáʿara}}
 * Armenian: {{t|hy|զգալ|sc=Armn}}
 * Aromanian: {{t|rup|simtu}}
+* Asturian: {{t|ast|sentir}}
 * Azeri: {{t|az|hiss etmək}}, {{t+|az|duymaq}}
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}, {{t|be|чуць|impf|tr=čucʹ|sc=Cyrl}}, {{t|be|пачуць|pf|tr=pačúcʹ|sc=Cyrl}}
 * Bengali: {{t|bn|বোধ করা|tr=bodh kôra|sc=Beng}}
