--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -221,6 +221,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Uzbek: {{t+|uz|kelmoq}}
 * Venetian: {{t|vec|vegner}}
 * Vietnamese: {{t+|vi|lại}}
+* Walloon: {{t+|wa|vni}}
 * Welsh: {{t+|cy|dod}}
 * West Frisian: {{t|fy|komme}}
 * Yiddish: {{t|yi|קומען|tr=komen|sc=Hebr}}
