--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -59,6 +59,7 @@
 * Estonian: {{t|et|sadam}}
 * Finnish: {{t+|fi|satama}}
 * French: {{t+|fr|port|m}}
+* Friulian: {{t|fur|puart|m}}
 * Galician: {{t+|gl|porto|m}}
 * Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}, {{t|ka|ნავსადგური|tr=navsadguri|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
