--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -96,6 +96,7 @@
 * Romanian: {{t+|ro|port|n}}
 * Romansch: {{t|rm|port|m}}
 * Russian: {{t+|ru|порт|m|tr=port}}, {{t+|ru|га́вань|f|sc=Cyrl}}
+* Sardinian: {{t|sc|poltu|m}}
 * Scottish Gaelic: {{t|gd|port|m}}, {{t|gd|cala|m}}, {{t|gd|acarsaid|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|лука|f}}
