--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -10,7 +10,7 @@
 
 ===Etymology 1===
 [[File:Dubrovnik-port.jpg|right|thumb|The old port of [[Dubrovnik]]]]
-{{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||port, harbour|lang=la}}.
+From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||port, harbour|lang=la}}.
 
 ====Noun====
 {{en-noun}}
@@ -414,6 +414,9 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 
 ==French==
 
+===Etymology===
+From {{etyl|fro|fr}} {{term/t|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}, from {{etyl|itc-pro|fr}} {{term/t|itc-pro|*portus}}, from {{etyl|ine-pro|fr}} {{term/t|ine-pro|*pértus||crossing}}, from {{term/t|ine-pro|*per-||to go forth, to cross}}.
+
 ===Pronunciation===
 * {{audio|Fr-port.ogg|audio}}
 * {{IPA|/pɔʁ/|lang=fr}}
@@ -502,6 +505,9 @@ From {{etyl|la|roa-jer}} {{term|portus||port, harbour|lang=la}}.
 ----
 ==Ladin==
 
+===Etymology===
+From {{etyl|la|lld}} {{term/t|la|portus}}.
+
 ===Noun===
 {{lld-noun|m|porc}}
 
@@ -535,7 +541,7 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|no}} {{
 ==Old English==
 
 ===Etymology===
-{{etyl|la|ang}} {{term|portus|lang=la}}
+From {{etyl|la|ang}} {{term|portus|lang=la}}
 
 ===Noun===
 {{ang-noun|m}}
@@ -547,7 +553,7 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|no}} {{
 ==Old French==
 
 ===Etymology===
-{{etyl|la|fro}} {{term|portus|lang=la}}.
+From {{etyl|la|fro}} {{term|portus|lang=la}}.
 
 ===Pronunciation===
 * {{IPA|/pɔrt/|lang=fro}}
@@ -559,6 +565,8 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|no}} {{
 # {{l|en|port}} {{gloss|for watercraft}}
 #* {{quote-book|circa 1150|title=[[s:fr:La Chanson de Roland/Raoul Mortier|La Chanson de Roland]]|author=Turoldus|passage=As '''porz''' d'Espaigne en est passet Rollant|translation=Roland went to the ports of Spain}}
 
+====Descendants====
+* French: {{l|fr|port}}
 ----
 
 ==Polish==
@@ -589,7 +597,7 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|no}} {{
 ==Romanian==
 
 ===Etymology 1===
-From {{etyl|fr|ro}} {{term|port|lang=fr}}, {{etyl|it|ro}} {{term|porto|lang=it}}.
+From {{etyl|fr|ro}} {{term|port|lang=fr}}, {{etyl|it|ro}} {{term|porto|lang=it}}, {{etyl|la|ro}} {{term|portus|lang=la}}.
 
 ====Noun====
 {{ro-noun|n|porturi}}
