t+lld:[[port]] ([[WT:EDIT|Assisted]]) <port#25830963>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -80,6 +80,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Khmer: {{t|km|កំពង់ផែ|tr=kɑmpʊəŋ pʰae|sc=Khmr}}, {{t+|km|កំពង់|tr=kɑmpʊəŋ|sc=Khmr}}
 * Korean: {{t+|ko|항구|tr=hanggu|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
+* Ladin: {{t|lld|port|m}}
 * Lao: {{t|lo|ທ່າ|tr=thā|sc=Laoo}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|ūsta|f}}
