--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -84,6 +84,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Lao: {{t|lo|ທ່າ|tr=thā|sc=Laoo}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|ūsta|f}}
+* Latin: {{t|la|portus}}
 * Latvian: {{t+|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
