--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -21,7 +21,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=taai3|sim=态}}
+{{yue-hanzi|jyut=taai3|y=taai3|sim=态}}
 
 # {{defn|lang=yue|sort=心10}}
 
