# To [[attract]] or [[net]]; to [[pull in]].  #* Marcella Ridlen Ray, ''Changing and Unchanging Face of United States Civil Society''  #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies. <pull#25832937>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -21,6 +21,9 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #: ''to '''pull''' fruit from a tree; to '''pull''' flax; to '''pull''' a finch''
 # {{context|intransitive|lang=en}} to apply a force such that an object comes toward the person or thing applying the force
 #: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
+# To [[attract]] or [[net]]; to [[pull in]].
+#* Marcella Ridlen Ray, ''Changing and Unchanging Face of United States Civil Society''
+#*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
 # To draw apart; to tear; to rend.
 #* Bible, Lam. iii. 11
 #*: He hath turned aside my ways, and '''pulled''' me in pieces; he hath made me desolate.
