--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -105,6 +105,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * [[come with]]
 * [[come with the territory]]
 * [[come what may]]
+* [[to come]]
 {{rel-bottom}}
 
 ====Translations====
