--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -200,12 +200,13 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Italian: {{t+|it|branca|f}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
-{{trans-mid}}
 * Portuguese: {{t+|pt|divisão}}, {{t+|pt|ramo|m}} {{qualifier|in science, in arts}}
+{{trans-mid}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t+|ro|branșă|f}}
 * Russian: {{t+|ru|отрасль|f|tr=ótraslʹ|sc=Cyrl}}, {{t+|ru|область|f|tr=óblastʹ|sc=Cyrl}}
 * Scots: {{t|sco|brainch}}
 * Scottish Gaelic: {{t|gd|meur|f}}
+* Swedish: {{t+|sv|gren|c}}, {{t+|sv|område|n}}
 * Tagalog: {{t|tl|sangay}}
 * Telugu: {{t+|te|శాఖ}}
 * Turkish: {{t+|tr|dal}}
