--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -2,6 +2,7 @@
 
 ===Alternative forms===
 * [[blond]]
+blondie
 
 ===Etymology===
 From {{etyl|frm|en}} {{term|blonde|lang=fr}} {{g|f}}. For more, see the entry ''[[blond]]''.
