--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,7 +1,7 @@
 ==French==
 
 ===Etymology===
-From {{etyl|la|fr}} {{term/t|la|diēs Iovis||day of Jupiter}}.
+From {{etyl|la|es}} "''Iovis dīēs''", variant of '''[[dies Iovis|dīēs Iovis]]'''.
 
 ===Pronunciation===
 * {{IPA|/ʒø.di/|lang=fr}}
