edit section 2.1 ([[WT:EDIT|Assisted]]) <坏#25841230>

--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -18,7 +18,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=pui1, pui4, waai6|tra=壞}}
+{{yue-hanzi|jyut=[[pui1]], [[pui4]], [[waai6]]|y=pui1, pui4, waai6|tra=壞}}
 
 # {{defn|lang=yue|sort=土04}}
 
