--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -203,7 +203,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t+|cmn|白脫|sc=Hani}}, {{t+|cmn|白脱|tr=báituō|sc=Hani}}
 * Czech: {{t+|cs|máslo|n}}
 * Dalmatian: {{t|dlm|butir|m}}
-* Danish: {{t+|da|smør}}
+* Danish: {{t+|da|smør|n}}
 * Dutch: {{t+|nl|boter|f}}
 * Esperanto: {{t|eo|butero}}
 * Estonian: {{t+|et|või}}
@@ -259,6 +259,9 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * {{trreq|mwl}}
 * Mongolian: {{t|mn|цөцгийн тос|sc=Cyrl}}
 * Navajo: {{t|nv|mandagíiya}}
+* Norwegian:
+*: Bokmål: {{t+|nb|smør|n}}
+*: Nynorsk: {{t|nn|smør|n}}
 * Novial: {{t|nov|butre}}
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
 * Old Church Slavonic: {{t|cu|масло|n|tr=maslo|sc=Cyrs}}
