edit section 2.1 ([[WT:EDIT|Assisted]]) <倾#25854700>

--- a/en/倾/倾.11084.wikitext
+++ b/en/倾/倾.11084.wikitext
@@ -17,7 +17,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=king1|tra=傾}}
+{{yue-hanzi|jyut=king1|y=king1|tra=傾}}
 
 # {{defn|lang=yue|sort=人08}}
 
