edit section 2.1 ([[WT:EDIT|Assisted]]) <春#25855271>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -25,7 +25,7 @@ There are minor differences in where the last stroke of the top component (top-l
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=cheun1}}
+{{yue-hanzi|jyut=ceon1|y=cheun1}}
 
 # {{defn|lang=yue|sort=日05}}
 
