--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -121,7 +121,7 @@
 * Turkmen: {{t|tk|Amerikanyň Birleşen Ştatlary}}
 * Ukrainian: {{t+|uk|Сполу́чені Шта́ти Аме́рики|m-p}}, {{t+|uk|США|m-p}}, {{t|uk|Злу́чені Шта́ти Аме́рики|m-p}}, {{t|uk|ЗША|m-p}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyaastahaa'e muttaHidah amriikaa}}
-* Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى|sc=Arab}}
+* Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى|tr=Amërika Qoshma Shtatliri|sc=Arab}}
 * Uzbek: {{t|uz|Amerika Qo'shma Shtatlari}}
 * Vietnamese: {{t+|vi|Hoa Kỳ}}, {{t|vi|Nước Mỹ}}, {{t|vi|Mỹ Quốc}}, {{t|vi|Hợp chúng quốc Hoa Kỳ}}, {{t|vi|HK}}, {{t+|vi|Mỹ}}
 * Volapük: {{t+|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t+|vo|Tats-Pebalöl}}
