--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -29,6 +29,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the Land of Israel, the [[Levant]], [[Palestine]]
 * {{sense|ancient kingdom}} [[Ephraim]]
 * {{sense|the Jews}} the Children of Israel
+* [[apartheid state]] {{qualifier|highly offensive}}
 
 ====Usage notes====
 * {{sense|Land of Israel}} The use of the name {{term||Israel|lang=en}} to refer to the region is sometimes seen as politically or emotionally charged; indeed, this is true of all terms for this region.
