/* Translations */ cleaning up pt <branch#25866390>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -102,7 +102,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Occitan: {{t|oc|ram|m}}, {{t|oc|ramèl|m}}
 * Persian: {{t+|fa|شاخه|tr=šâxe|sc=fa-Arab}}
 * Polish: {{t+|pl|gałąź|f}}
-* Portuguese: {{t+|pt|galho|m}}, {{t+|pt|ramo}}
+* Portuguese: {{t+|pt|galho|m}}, {{t+|pt|ramo|m}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t+|ro|creangă|f}}
 * Romansch: {{t|rm|rom|m}}, {{t|rm|ram|m}}
 * Russian: {{t+|ru|ветвь|f|tr=vetvʹ|sc=Cyrl}}, {{t+|ru|ветка|f|tr=vétka|sc=Cyrl}}, {{t+|ru|веточка|f|tr=vétočka|sc=Cyrl}} {{qualifier|small twig}}
@@ -139,7 +139,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Hebrew: {{t|he|ענף|m|tr=anaf}}
 * Hungarian: {{t|hu|leágazás}}
 * Polish: {{t+|pl|rozgałęzienie|n}}
-* Portuguese: {{t+|pt|ramo|m}}, {{t+|pt|broto}}
+* Portuguese: {{t+|pt|ramo|m}}, {{t+|pt|broto|m}}
 {{trans-mid}}
 * Russian: {{t+|ru|ответвление|n|tr=otvetvlénije|sc=Cyrl}}, {{t+|ru|ветка|f|tr=vétka|sc=Cyrl}}
 * Scots: {{t|sco|brainch}}
@@ -172,7 +172,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 {{trans-mid}}
 * Persian: {{t+|fa|شعبه|tr=šobe|sc=fa-Arab}}
 * Polish: {{t+|pl|oddział}}, {{t+|pl|filia}}
-* Portuguese: {{t+|pt|filial|f}}, {{t|pt|departamanto}}, {{t+|pt|divisão}}, {{t+|pt|repartição}}
+* Portuguese: {{t+|pt|filial|f}}, {{t|pt|departamento|m}}, {{t+|pt|divisão|f}}, {{t+|pt|repartição|f}}
 * Romanian: {{t+|ro|filială|f}}, {{t+|ro|sucursală|f}}
 * Russian: {{t+|ru|отделение|n|tr=otdelénije|sc=Cyrl}}, {{t+|ru|филиал|m|tr=filiál|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|meur|f}}
@@ -200,7 +200,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Italian: {{t+|it|branca|f}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
-* Portuguese: {{t+|pt|divisão}}, {{t+|pt|ramo|m}} {{qualifier|in science, in arts}}
+* Portuguese: {{t+|pt|divisão|f}}, {{t+|pt|ramo|m}} {{qualifier|in science, in arts}}
 {{trans-mid}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t+|ro|branșă|f}}
 * Russian: {{t+|ru|отрасль|f|tr=ótraslʹ|sc=Cyrl}}, {{t+|ru|область|f|tr=óblastʹ|sc=Cyrl}}
