--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -66,7 +66,7 @@ From {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}; akin to {{etyl|da|-}}
 {{trans-top|(figuratively) feel strongly about}}
 * German: {{t+|de|hängen|alt=hängen an}}
 {{trans-mid}}
-* Russian: {{t+|ru|цепляться|tr=ceplját'sja}} {{t+|ru|зв|tr=za}}
+* Russian: {{t+|ru|цепляться|tr=ceplját'sja}} {{t+|ru|за|tr=za}}
 * Spanish: {{t|es|estar apegado|alt=estar apegado a}}, {{t+|es|aferrarse}}
 {{trans-bottom}}
 
