--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -65,7 +65,7 @@
 * Faroese: {{t|fo|oljuber|n}}
 * Finnish: {{t+|fi|oliivi}}
 * French: {{t+|fr|olive|f}}
-* Friulian: {{t|fur|olive|f}}
+* Friulian: {{t|fur|ulive|f}}
 * Galician: {{t+|gl|oliva|f}}
 * Georgian: {{t|ka|ზეთისხილი|tr=zet'isxili|sc=Geor}}
 * German: {{t+|de|Olive|f}}
