--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -9,7 +9,7 @@
 #: {{usex|Mexico and Canada border the '''United States of America'''.|lang=en}}
 
 ====Synonyms====
-* {{sense|country in North America}} [[United States]], [[United States of North America]], [[U.S.]], [[USA]], [[U.S.A.]], [[U.S. of A.]], [[Usonia]], [[Usania]], [[Yankee land]], [[land of the free]]
+* {{sense|country in North America}} [[United States]], [[United States of North America]], [[U.S.]], [[USA]], [[U.S.A.]], [[U.S. of A.]], [[Usonia]], [[Usania]], [[Yankee land]], [[land of the free]], [[Usona]]
 
 {{-}}
 
