--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -28,7 +28,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 
 ====Usage notes====
 * This phrase is not usually written out; rather, it is usually abbreviated in writing as {{term|etc.|lang=en}}, or sometimes (especially formerly) as {{term|&c.|lang=en}}. These abbreviations are still pronounced, however, as the full phrase.
-* Many speakers use a {{IPAchar|/k/|lang=en}} sound rather than a {{IPAchar|/t/|lang=en}} sound in the first word. This pronunciation is usually considered incorrect, is proscribed, and is somewhat stigmatized. It is sometimes represented in [[eye dialect]] as "[[excetera#English|excetera]]", "[[exetera#English|exetera]]", or "[[ekcetera#English|ekcetera]]".
+* Many speakers use a {{IPAchar|/k/|lang=en}} sound rather than a {{IPAchar|/t/|lang=en}} sound in the first word. This pronunciation is usually considered incorrect, is [[proscribe]]d, and is somewhat stigmatized. It is sometimes represented in [[eye dialect]] as "[[excetera#English|excetera]]", "[[exetera#English|exetera]]", or "[[ekcetera#English|ekcetera]]".
 
 ====Synonyms====
 * {{sense|to complete a list}} [[et al.]]
