t+fur:[[biele]] ([[WT:EDIT|Assisted]]) <beautiful#25931389>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -85,7 +85,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Fijian: {{t|fj|totoka}}
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}, {{t+|fr|belle|f}}
-* Friulian: {{t|fur|biel|m}}
+* Friulian: {{t|fur|biel|m}}, {{t|fur|biele|f}}
 * Georgian: {{t|ka|მშვენიერი|tr=mšvenieri|sc=Geor}}, {{t|ka|ლამაზი|tr=lamazi|sc=Geor}}
 * German: {{t+|de|schön}}
 * Greek: {{t+|el|ωραίος|m|tr=oraíos}}, {{t+|el|όμορφος|m|tr=ómorfos}}
