--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -153,6 +153,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Turkish: {{t+|tr|güzel}}
 * Ukrainian: {{t|uk|вродливий|tr=vrodlývyj}}, {{t+|uk|красивий|tr=krasývyj}}
 * Urdu: {{t|ur|خوبصورت|tr=xūbsūrat}}, {{t|ur|سندر|tr=sundar}}
+* Venetian: {{t|vec|beło|m}}
 * Vietnamese: {{t|vi|đẹp đẽ}}, {{t+|vi|tốt}}, {{t+|vi|tốt đẹp}}, {{t+|vi|đẹp}}, {{t+|vi|xinh đẹp}}
 * Volapük: {{t+|vo|jönik}}, {{qualifier|augmentative}} {{t+|vo|lejönik}}
 * Walloon: {{t+|wa|bea|m}}
