--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[toi4]]|y=toi4}}
+
+# {{defn|lang=yue|sort=日03}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Japanese==
 
 ===Kanji===
