/* Derived terms */ <fight#26060539>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -44,10 +44,11 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 
 ====Derived terms====
 {{rel-top|Terms derived from the verb ''to fight''}}
+* [[fight a losing battle]]
 * [[fight back]]
 * [[fight fire with fire]]
-* [[fightest]]
 {{rel-mid}}
+* [[fightest]]
 * [[fight shy of]]
 * [[fight tooth and nail]]
 {{rel-bottom}}
