--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -85,6 +85,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Amharic: {{t|am|ድልድይ|sc=Ethi}}
 * Arabic: {{t|ar|جسر|m|tr=jisr|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|كوبري|m|tr=kobri|sc=Arab}}
+*: Moroccan Arabic: {{t|ary|قنطرة|f|tr=qənṭra}}
 * {{trreq|an}}
 * Aramaic: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
 *: Classical Syriac: {{t|syc|ܓܫܪܐ|sc=Syrc}}
