--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -137,6 +137,7 @@
 * Arabic: {{t|ar|مستفيم|sc=Arab}}
 * Armenian: {{t+|hy|ուղիղ|tr=uġiġ}}
 * Aromanian: {{t|rup|ãndreptu}}
+* Asturian: {{t|ast|derechu}}
 * Burmese: {{t+|my|ဖြောင့်|tr=hpyaung.|sc=Mymr}}, {{t+|my|စင်း|tr=sin:|sc=Mymr}}
 * Chamicuro: {{t|ccc|nanatolo}}
 * Chinese:
