--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -178,6 +178,7 @@
 * Spanish: {{t+|es|recto}}, {{t+|es|liso}} {{qualifier|hair}}
 * Swedish: {{t+|sv|rak}}
 * Urdu: {{t|ur|سیدھا|tr=sīdhā|sc=ur-Arab}}
+* Venetian: {{t|vec|dirito}}
 * Walloon: {{t+|wa|droet}}
 {{trans-bottom}}
 
