--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -172,6 +172,7 @@
 * Romanian: {{t+|ro|drept}}
 * Romansch: {{t|rm|dretg}}
 * Russian: {{t+|ru|прямой|tr=prjamój}}
+* Sardinian: {{t|sc|daretu}}
 * Scots: {{t|sco|straucht}}
 * Scottish Gaelic: {{t|gd|dìreach}}
 * Sicilian: {{t+|scn|drittu}}
