--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2621<sub>3</sub>|canj=人竹山戈 (OHUI)|ids=⿰[[亻]][[鬼]]}}
 
-# [[great]], [[gigantic]]
+# [[gret]], [[gigantic]]
 # [[puppet]]
 
 ====References====
