--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 * Hebrew: {{t|he|כוסמין}}
 * Hungarian: {{t|hu|tönkölybúza}}
 {{trans-mid}}
-* Icelandic: {{t|is|spelt}}, {{t|is|speldi|n}}
+* Icelandic: {{t|is|spelt|n}}, {{t|is|speldi|n}}
 * Italian: {{t|it|spelta|f}}
 * Luxembourgish: {{t|lb|Spelz}}
 * Norwegian: {{t|no|spelt}}
