t-balance ([[WT:EDIT|Assisted]]) <straight#26123435>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -242,6 +242,7 @@
 
 {{trans-top|conventional}}
 * Italian: {{t|it|convenzionale}}
+* Spanish: {{t+|es|convencional}}
 {{trans-mid}}
 * Spanish: {{t+|es|convencional}}
 {{trans-bottom}}
