--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -336,7 +336,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Macedonian: {{t|mk|пушта|tr=púšta}}
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
 * Polish: {{t+|pl|grać}}, {{t+|pl|odtwarzać}}
-* Portuguese: {{t+|pt|gravar}}
+* Portuguese: {{t+|pt|tocar}}, {{t|pt|reproduzir}}
 * Slovene: {{t|sl|predvajati}}
 * Spanish: {{t+|es|reproducir}}
 * Swahili: {{t+|sw|tamthilia}}
