t+ja:[[{{trreq}}]] t+es:[[{{trreq}}]] t-balance ([[WT:EDIT|Assisted]]) <catch#26152822>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -343,19 +343,21 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
 * {{trreq|ka}}
 * Italian: {{t+|it|agguantare}}
+* {{trreq|Japanese}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t|pl|łapać|impf}}, {{t|pl|złapać|pf}}
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 * Romanian: {{t+|ro|prinde}}
-* Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 {{trans-mid}}
+* Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 * Sardinian:
 *: Campidanese Sardinian: {{t|sro|aggaffài}}
 *: Gallurese Sardinian: {{t|sdn|aggantà}}
 *: Logudorese Sardinian: {{t|src|aggarrare}}
 * Sassarese Sardinian: {{t|sdc|agguantà}}
 * Scottish Gaelic: {{t|gd|glac}}
+* {{trreq|Spanish}}
 * Ukrainian: {{t+|uk|лови́ти|impf}}, {{t+|uk|пійма́ти|pf}}
 
 {{trans-bottom}}
@@ -404,6 +406,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Finnish: {{t+|fi|käsittää}}, {{t+|fi|ymmärtää}}
 * German: {{t+|de|verstehen}}, {{t+|de|begreifen}}
 * Hebrew: {{t+|he|תָּפַס|tr=tafás}}
+* {{trreq|Japanese}}
 * Marathi: {{t|mr|समझणे|tr=samazhaṇe|sc=Deva}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|entender}}, {{t+|pt|compreender}}, {{t+|pt|captar}}, {{t+|pt|sacar}} {{qualifier|slang}}
