--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -6,7 +6,7 @@
 # [[light]] of [[sun]]
 # [[good]], [[proper]]
 # [[beautiful]], [[lovely]]
-# [[flourish]], [[propser]], [[thrive]]
+# [[flourish]], [[prosper]], [[thrive]]
 
 ====References====
 * {{Han ref|kx=0491.100|dkj=13803|dj=0852.160|hdz=21490.030|uh=660C|ud=26124|bh=A9F7|bd=43511}}
