--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -205,7 +205,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Korean: {{t+|ko|구부리다|tr=guburida|sc=Kore}}
 {{trans-mid}}
 * Macedonian: {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|свиткува|tr=svítkuva|sc=Cyrl}}, {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|искривува|tr=iskrívuva|sc=Cyrl}}
-* Portuguese: {{t+|pt|curvar}}, {{t+|pt|envergar}}, {{t+|pt|envergar}}
+* Portuguese: {{t+|pt|curvar}}, {{t+|pt|envergar}}
 * Russian: {{t+|ru|изгибать}}, {{t+|ru|гнуть}}
 * Scottish Gaelic: {{t|gd|crom}}, {{t|gd|lùb}}
 * Spanish: {{t+|es|curvar}}, {{t+|es|encorvar}}
