#* Shakespeare  #*: I find my '''zenith''' doth depend upon / A most auspicious star.  #* Macaulay  #*: It was during those civil troubles {{...}} this aspiring family reached the '''zenith'''. <zenith#26236907>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -25,6 +25,10 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 #* '''1920''', [[w:Peter B. Kyne|Peter B. Kyne]], ''The Understanding Heart'', Chapter II:
 #*: As far to the west as Monica could see, her world was a sea of fog, {{...}}. Above it arched a cerulean sky; as the sun climbed to the '''zenith''', {{...}}, the fog gradually took on a bluish tinge.
 # Highest point or [[state]]; [[peak]].
+#* Shakespeare
+#*: I find my '''zenith''' doth depend upon / A most auspicious star.
+#* Macaulay
+#*: It was during those civil troubles {{...}} this aspiring family reached the '''zenith'''.
 #* {{quote-book
 |page=173
 |year=1900
