--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -94,6 +94,12 @@
 
 ----
 
+==Middle Chinese==
+===Han character===
+'''健''' (*ghiæ̀n)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
+
+----
+
 ==Vietnamese==
 
 ===Han character===
