t+fur:[[tirâ]] ([[WT:EDIT|Assisted]]) <pull#26252086>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -137,6 +137,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Esperanto: {{t|eo|tiri}}
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|tirer}}
+* Friulian: {{t|fur|tirâ}}
 * Galician: {{t|gl|puxar}}, {{t+|gl|tirar}}
 * German: {{t+|de|ziehen}}
 * Hindi: {{t|hi|खींचना|tr=khī̃cnā|sc=Deva}}
