Orphaning [[Template:checktrans]] per [[WT:RFDO]] <olive#26265615>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -178,8 +178,9 @@
 * Urdu: {{t|ur|[[زیتون]] [[رنگ]]|tr=zaitūn rang}}
 {{trans-bottom}}
 
-{{checktrans}}
+{{checktrans-top}}
 * {{ttbc|cy}}: [[olewydden]] (?)
+{{checktrans-bottom}}
 
 ====Derived terms====
 {{top3}}
