t+ro:[[reduce]] ([[WT:EDIT|Assisted]]) <cut#26267568>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -645,7 +645,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Icelandic: {{t|is|skera niður}}
 * Japanese: {{t|ja|減らす|tr=へらす, herasu}} {{t+|ja|削減|alt=削減する|tr=さくげんする, sakugen suru}}, {{t|ja|カット|alt=カットする|tr=katto suru}}
 * Portuguese: {{t+|pt|diminuir}}, {{t+|pt|reduzir}}
-* Romanian: {{t+|ro|diminua}}
+* Romanian: {{t+|ro|diminua}}, {{t+|ro|reduce}}
 * Russian: {{t+|ru|уреза́ть|impf|tr=urezátʹ}}, {{t+|ru|уре́зать|pf|tr=urézatʹ}}
 * Scottish Gaelic: {{t|gd|geàrr}}
 * Spanish: {{t+|es|recortar}}
