--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -341,15 +341,20 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ====Translations====
 {{trans-top|to capture or snare}}
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
-* {{trreq|ka}}
+* Chinese:
+*: Mandarin: {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
+* French: {{t+|fr|attraper}}
+* Georgian: {{t|ka|დაჭერა|sc=Geor}}
+* German: {{t+|de|fangen}}
 * Italian: {{t+|it|agguantare}}
 * {{trreq|Japanese}}
+* Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t|pl|łapać|impf}}, {{t|pl|złapać|pf}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 * Romanian: {{t+|ro|prinde}}
-{{trans-mid}}
 * Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 * Sardinian:
 *: Campidanese Sardinian: {{t|sro|aggaffài}}
@@ -358,6 +363,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Sassarese Sardinian: {{t|sdc|agguantà}}
 * Scottish Gaelic: {{t|gd|glac}}
 * {{trreq|Spanish}}
+* Spanish: {{t+|es|capturar}}
 * Ukrainian: {{t+|uk|лови́ти|impf}}, {{t+|uk|пійма́ти|pf}}
 
 {{trans-bottom}}
