--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2322<sub>7</sub>|canj=人竹尸月 (OHSB), 人戈尸月 (OISB)|ids=⿰[[亻]][[扁]]}}
 
-# [[inclined]] one side
+# [[inclined]] on one side
 # [[slanting]]
 
 ====References====
