Fixing mismatched {{[[Template:bottom|bottom]]}}s <星#26322214>

--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -69,7 +69,7 @@
 * {{l|ja|星座}} ({{l|ja|せいざ}}, ''[[seiza]]''): {{sense|astronomy}} [[constellation]]
 * {{l|ja|流星}} ({{l|ja|りゅうせい}}, ''[[ryūsei]]''): {{sense|astronomy}} [[meteor]]
 * {{l|ja|彗星}} ({{l|ja|すいせい}}, ''[[suisei]]''): {{sense|astronomy}} [[comet]]
-{{bottom}}
+{{der-bottom}}
 
 ===Etymology===
 From {{etyl|ojp|ja|sort=ほし}}. Possibly cognate with Korean {{term|lang=ko|별|tr=byeol||star}} and Manchu {{term|lang=mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
