t+hsb:[[hrimać]] ([[WT:EDIT|Assisted]]) <thunder#26334763>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -253,6 +253,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * Slovene: {{t|sl|grmeti}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|grimaś|impf}}
+*: Upper Sorbian: {{t|hsb|hrimać}}
 * Spanish: {{t|es|tronar}}
 * Swedish: {{t|sv|dundra}}, {{t+|sv|dåna}}
 * Thai: {{t|th|สายฟ้าฟาด|tr=săaifáa fâat}}
