edit section 5.2 ([[WT:EDIT|Assisted]]) <偶#26346065>

--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -69,7 +69,7 @@
 # {{defn|lang=cmn|sort=人09}}
 
 ===Adverb===
-{{head|cmn|adverb|sc=Hani}}{{attention|cmn|needs inflection template}}
+{{cmn-adv|ts|pin=|pint=}}
 
 # [[accidentally]], [[coincidentally]]
 
