--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=cheung1}}
+{{yue-hanzi|jyut=coeng1|y=cheung1}}
 
 # {{defn|lang=yue|sort=日04}}
 
