--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -351,6 +351,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 [[Category:English verb forms using redundant wikisyntax]]
 [[Category:English verbs with base form identical to past participle]]
 [[Category:en:Behaviour]]
+[[Category:Italian interrogative adverbs]]
 
 ----
 
