--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -53,7 +53,9 @@
 * Hindi: {{t|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t|hu|teknős}}
 * Icelandic: {{t|is|landskjaldbaka|f}}, {{t+|is|skjaldbaka|f}} {{qualifier|tortoise or turtle}}
+* Ibo: mbe
 * Ido: {{qualifier|♂♀}} {{t+|io|tortugo}}, {{qualifier|♂}} {{t|io|tortugulo}}, {{qualifier|♀}} {{t|io|tortugino}}
+* Igbo: mbeku
 * Indonesian: {{t+|id|kura-kura}}, {{t+|id|penyu}}
 * Isthmus Zapotec: {{t|zai|bigu}}
 * Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}
