--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -190,7 +190,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Chinese:
 *: Mandarin: {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla|f}}
-* {{trreq|nl}}
+* Dutch: {{t+|nl|koelkast|m|f}}
 * {{trreq|fr}}
 * {{trreq|de}}
 {{trans-mid}}
