--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -95,7 +95,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Asturian: {{t+|ast|falar}}
 * {{trreq|av}}
 * Azeri: {{t+|az|danışmaq}}
-* Belarusian: {{t+|be|гаварыць|impf|tr=havarýcʹ}}, {{t|be|сказаць|pf|tr=skazác’}}, {{t|be|размаўляць|tr=razmaŭljácʹ}}, {{t|be|размо́віць|pf|sc=Cyrl}}
+* Belarusian: {{t+|be|гаварыць|impf|tr=havarýcʹ}}, {{t|be|сказаць|pf|tr=skazác’}}, {{t|be|размаўля́ць|impf|sc=Cyrl}}, {{t|be|размо́віць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|বলা|tr=bôla|sc=Beng}}
 * Breton: {{t+|br|komz}}
 * Bulgarian: {{t+|bg|говоря|tr=govórja}}
