--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -149,9 +149,9 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Macedonian: {{t|mk|збо́рува|impf}}
 * Malay: {{t|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക|sc=Mlym}}
-{{trans-mid}}
 * Maltese: {{t|mt|tkellem}}
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
+{{trans-mid}}
 * {{trreq|xmf}}
 * Mongolian: {{t|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
@@ -180,7 +180,9 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 *: Southern Sami: {{t|sma|håaledh}}, {{t|sma|håalodh}}, {{t|sma|nåalodh}}
 * Santali: {{t|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * Scottish Gaelic: {{t|gd|bruidhinn}}
-* Serbo-Croatian: {{t|sh|говорити|sc=Cyrl}}, {{t|sh|govoriti}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|говорити|impf|sc=Cyrl}}
+*: Roman: {{t|sh|govoriti|impf}}
 * Sicilian: {{t+|scn|parrari}}, {{t+|scn|parlari}}
 * Sinhalese: {{t|si|කථා කරනවා|sc=Sinh}}
 * Slovak: {{t|sk|hovoriť|impf}}, {{t|sk|rozprávať|impf}}
