t+crh:[[söyleşmek]] t-balance t+crh:[[laf etmek]] t+crh:[[aytmaq]] ([[WT:EDIT|Assisted]]) <speak#26384173>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -105,6 +105,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Chechen: {{t|ce|лен}}
 * Chinese:
 *: Mandarin: {{t+|cmn|說|sc=Hani}}, {{t+|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t+|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t+|cmn|講|sc=Hani}}, {{t+|cmn|讲|tr=jiǎng|sc=Hani}}
+* Crimean Tatar: {{t|crh|söyleşmek}}, {{t|crh|laf etmek}}, {{t|crh|aytmaq}}
 * Czech: {{t+|cs|mluvit|impf}}, {{t+|cs|hovořit|impf}}
 * Dalmatian: {{t|dlm|faular}}
 * Danish: {{t+|da|tale}}
@@ -150,8 +151,8 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Malay: {{t|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക|sc=Mlym}}
 * Maltese: {{t|mt|tkellem}}
-* Marathi: {{t|mr|बोलणे|sc=Deva}}
 {{trans-mid}}
+* Marathi: {{t|mr|बोलणे|sc=Deva}}
 * {{trreq|xmf}}
 * Mongolian: {{t|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
