--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -498,6 +498,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t+|hi|काटना|tr=kāṭnā|sc=Deva}}
 * Icelandic: {{t+|is|skera}}
+* Istriot: {{t|ist|talgià}}
 * Italian: {{t+|it|tagliare}}, {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る|tr=きる, kiru}}
 * Jèrriais: {{t|roa-jer|coper}}
