t+ist:[[talgià]] ([[WT:EDIT|Assisted]]) <cut#26425632>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -563,6 +563,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Icelandic: {{qualifier|with a knife}} {{t+|is|skera}}, {{qualifier|with scissors}} {{t|is|klippa}}
 * Irish: {{t|ga|bain}} {{qualifier|grass, hay, etc.}}
+* Istriot: {{t|ist|talgià}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|tr=きる, kiru}}
 * Jèrriais: {{t|roa-jer|coper}}
