t+scn:[[tagghiari]] ([[WT:EDIT|Assisted]]) <cut#26425662>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -523,6 +523,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|резати|impf}}, {{t|sh|сећи|impf}}, {{t|sh|сјећи|impf}}
 *: Roman: {{t|sh|rezati|impf}}, {{t|sh|seći|impf}}, {{t|sh|sjeći|impf}}
+* Sicilian: {{t+|scn|tagghiari}}
 * Slovak: {{t|sk|rezať|impf}}, {{t|sk|ťať}}
 * Slovene: {{t+|sl|rezati|impf}}
 * Sorbian:
