--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -131,6 +131,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Interlingua: {{t+|ia|parlar}}
 * {{trreq|ie}}
 * Irish: {{t|ga|labhair}}
+* Istriot: {{t|ist|favalà}}
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}}, {{t+|ja|しゃべる|tr=shaberu}}
 * Jèrriais: {{t|roa-jer|pâler}}
