/* Translations */ no <plum#26458167>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -325,9 +325,9 @@ From {{etyl|ang|en}} {{term/t|ang|plūme}}, from {{etyl|gem-pro|en}} {{term/t|ge
 * {{ttbc|ang}}: {{t|ang|plūme|f|sc=Latinx}}
 * {{ttbc|gl}}: {{t+|gl|ameixeira|f}} (1), {{t+|gl|ameixa|f}} (2)
 * {{ttbc|la}}: {{t|la|prunum|n}}
-{{trans-mid}}
 * {{ttbc|lt}}: {{t+|lt|slyva|f}} (1, 2), {{t|lt|slyvinis|m}} (3)
-* {{ttbc|no}}: {{t+|no|plomme}}
+* {{ttbc|no}}: {{t+|no|plomme|mf}}
+{{trans-mid}}
 * {{ttbc|sa}}: {{t|sa|कर्कन्धुः|tr=karkandhuḥ|sc=Deva}}
 * {{ttbc|th}}: {{t|th|ลูกพุทราฝรั่ง|tr=luukphutrafrang|sc=Thai}}
 * {{ttbc|vo}}: {{t+|vo|plöm}}
