edit section 2.1 ([[WT:EDIT|Assisted]]) <惴#26511502>

--- a/en/惴/惴.15625.wikitext
+++ b/en/惴/惴.15625.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=chyun3, jeui3}}
+{{yue-hanzi|jyut=[[cyun3]], [[zeoi3]]|y=chyun3, jeui3}}
 
 # {{defn|lang=yue|sort=心09}}
 
