/* Translations */  cloth: es:cortina(f) fr:voil(m), theater: es: telón(m), fr:rideau(m) <curtain#26535833>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -55,7 +55,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * {{trreq|et}}
 * Faroese: {{t|fo|gardina|f}}, {{t|fo|gluggatjald|n}}
 * Finnish: {{t+|fi|verho}}
-* French: {{t+|fr|rideau|m}}
+* French: {{t+|fr|voil|m}}
 * Galician: {{t|gl|cortina|f}}
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
 * German: {{t+|de|Vorhang|m}}, {{t+|de|Gardine|f}}
@@ -127,6 +127,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Dutch: {{t+|nl|doek|n}}
 * Esperanto: {{t|eo|kurteno}}
 * Finnish: {{t|fi|esirippu}}
+* French: {{t+|fr|rideau|m}}
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
 * German: {{t+|de|Vorhang|m}}
 * Greek: {{t+|el|αυλαία|f}}
@@ -151,7 +152,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 *: Roman: (''Ekavian'') {{t|sh|zȃvesa|f}}, (''Ijekavian'') {{t|sh|zȃvjesa|f}} ; {{t|sh|zástor|m}}
 * Slovak: {{t|sk|opona|f}}
 * Slovene: {{t|sl|zavésa|f}}
-* Spanish: {{t+|es|cortina|f}}, {{t|es|telón|m}}
+* Spanish:  {{t|es|telón|m}}
 * Swahili: {{t+|sw|pazia}}
 * Swedish: {{t+|sv|ridå|c}}
 * Turkish: {{t+|tr|perde}}
