--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -243,7 +243,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Zulu: {{t|zu|biza|alt=-biza}}
 {{trans-bottom}}
 {{trans-top|To cause something to be lost}}
-* Chinese: {{t+|cmn|耗费了；花费了|sc=Hani}}
+* Chinese: {{t+|cmn|付出了；耗费了；花费了|sc=Hani}}
 {{trans-bottom}}
 
 ===Etymology 4===
