--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -5,12 +5,12 @@
 
 ===Pronunciation===
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/}}
-*** {{a|UK}} {{IPA|/ˈbʌ.tə/}}
+*** {{a|RP}} {{IPA|/ˈbʌ.tə/}}
 *** {{audio|En-uk-butter.ogg|Audio (UK)|lang=en}}
 *** {{a|US}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌɾɚ]}}
 *** {{audio|en-us-butter.ogg|Audio (US)|lang=en}}
 ** {{rhymes|ʌtə(r)}}
-* {{a|some Northern England accents}} {{IPA|/ˈbʊ.tə/}}
+* {{a|Northern and Midland England, Wales, Scotland}} {{IPA|/ˈbʊ.tə/}}
 ** {{rhymes|ʊtə(r)}}
 * {{hyphenation|but|ter|lang=en}}
 
