--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -7,6 +7,7 @@
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/}}
 *** {{a|RP}} {{IPA|/ˈbʌ.tə/}}
 *** {{audio|En-uk-butter.ogg|Audio (UK)|lang=en}}
+** {{rhymes|ʌtə}}
 *** {{a|US}} {{IPA|/ˈbʌɾɚ|ˈbʌ.tɚ/}}
 *** {{audio|en-us-butter.ogg|Audio (US)|lang=en}}
 ** {{rhymes|ʌtə(r)}}
