--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -7,6 +7,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/}}
 * {{a|US|also}} {{IPA|/pl̩/}}
+** {{homophones|pole|Pole|poll}}
 * {{audio|en-us-pull.ogg|Audio (US)|lang=en}}
 * {{rhymes|ʊl}}
 
