--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -22,7 +22,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=wai5|sim=伟}}
+{{yue-hanzi|jyut=wai5|y=wai5|sim=伟}}
 
 # {{defn|lang=yue|sort=人09}}
 
