--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -7,7 +7,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/}}
 * {{a|US|also}} {{IPA|/pl̩/}}
-** {{homophones|pole|Pole|poll}}
+** {{homophones|lang=en|pole|Pole|poll}}
 * {{audio|en-us-pull.ogg|Audio (US)|lang=en}}
 * {{rhymes|ʊl}}
 
@@ -325,7 +325,6 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Finnish: {{t|fi|soutu}}, {{t|fi|soutumatka}}
 {{trans-mid}}
 {{trans-bottom}}
-
 
 [[Category:1000 English basic words]]
 ----
