--- a/en/愾/愾.15697.wikitext
+++ b/en/愾/愾.15697.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=koi3|sim=忾}}
+{{yue-hanzi|jyut=koi3|y=koi3|sim=忾}}
 
 # {{defn|lang=yue|sort=心10}}
 
