--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -66,6 +66,15 @@
 # {{cx|Beginning Mandarin|lang=cmn|sort=shi4}} [[is]]; to [[be]]
 #: {{usex|lang=cmn|泰晤士河'''是'''英国第二长的河流。|tr=Tàiwùshì hé '''shì''' Yīngguó dì'èr cháng de héliú.|t=The River Thames '''is''' the second longest river in the UK.}}
 
+====Usage note====
+even if it is translated as to [[be]], 是 is used only to link two nouns.
+{{zh-usex|我 是 老师。|I am a teacher.}} {{zh-usex|我 是 中国人。|I am chinese.}}
+It can't be used to link a noun and an adjective. The following sentence is wrong :
+: 这是好。
+The correct sentence is : 
+{{zh-usex|这 很 好。|This is good.}}
+Here [[很]] does not mean very. it is used to link a noun and an adjective.
+
 ===Noun===
 {{cmn-noun|ts|pin=shì|pint=shi4}}
 
