--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -33,6 +33,15 @@
 
 # {{defn|lang=ja|sort=土06}}
 
+===Noun===
+{{ja-noun|k|hira=かた|rom=kata}}
+
+# {{sense|Martial Arts}} [[choreograph]]ed [[training]] [[exercise]]s
+
+====See also====
+* {{pedialite|lang=ja}}
+* {{pedialite|Kata}}
+
 ====Readings====
 * {{ja-readings|on=[[けい]] (kei)|kun=[[かた]] (kata, gata)}}
 
