--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -68,6 +68,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Dalmatian: {{t|dlm|ruoma|f}}
 * Dutch: {{t+|nl|tak}}
 * Esperanto: {{t+|eo|branĉo}}
+* Estonian: {{t+|et|oks}}
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche|f}}, {{t+|fr|rameau|m}}
 * Friulian: {{t|fur|ram|m}}
