t+ist:[[vignì]] ([[WT:EDIT|Assisted]]) <come#26681486>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -155,6 +155,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Indonesian: {{t+|id|datang}}, {{t+|id|datang|alt=mendatangi}}, {{t+|id|datang|alt=mendatang}}, {{t+|id|datang|alt=mendatangkan}}
 * Interlingua: {{t|ia|venir}}
 * Irish: {{t|ga|tar}}
+* Istriot: {{t|ist|vignì}}
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|来る|tr=[[くる]], kúru}}, {{t+|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}}, {{t|ja|おいでになる|tr=o-ide-ni naru}} {{qualifier|honorific}}, {{t|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * Jèrriais: {{t|roa-jer|v'nîn}}
